--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="human-contents">
                     <p class="human-p">つられの編集担当。</p>
                     <p class="human-p">声真似のレパートリーはタラちゃん、オーキド博士、乙骨、碇シンジなど多岐に渡る。</p>
-                    <p class="human-p">元美容師で、今は現役のディレクターである。</p>
+                    <p class="human-p">現役のディレクターである。動画編集はお手の物</p>
                     <p class="human-p">ユダマンと2人の時はつられのボケ担当でもある。</p>
                 </div>
             </div>
