--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <img class="yudaman-img" src="png/haru.jpg">
                 <div class="human-contents">
                     <p class="human-p">ラガーマン。ダイエットに挑戦し、頑張っている最中である。</p>
-                    <p class="human-p">つられメンバーから雑な扱いを受けても全く怒らないナイスガイである。</p>
+                    <p class="human-p">つられメンバーから雑な扱いを受けても全く怒らないイケメン清純派童貞ナイスガイである。</p>
                     <p class="human-p">ユダマン曰く「はるのぶは雑に扱われるのが好きなんだろ。」との事。</p>
                     <p class="human-p">メンヘラ彼女に殺されかけた経験があり、「腹直筋は果物ナイフには勝てない」という名言を残している。</p>
                 </div>
