--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p class="human-p">つられファンの重鎮。</p>
                     <p class="human-p">「つられファンと言えば？」と聞かれたら真っ先に出てくる人物である。</p>
                     <p class="human-p">つられメンバーとの付き合いも長く、ユダマンと伊藤ロタからセクハラをされても許すくらい器の大きい寛大な女性である。</p>
-                    <p class="human-p">ピカチュウの声真似が上手。</p>
+                    <p class="human-p">恋バナが大好き。</p>
                 </div>
             </div>
             <h3 class="human-name fadein">まろ</h3>
