--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="title">
             <span id="title-fadein" class="title-text">2<span class="R1">R</span>A<span class="R2">R</span>E</span><br>
-            <span id="title-fadein2" class="sub-title">～つられて笑うCH～</span>
+            <span id="title-fadein2" class="sub-title">つられて笑うCH～</span>
         </div>
             <div class="shape-2418">
         </div>
