--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <p class="p-text">そんな笑い声と数々の声真似を武器に、APEXを主体としたゲーム実況配信を行っている3人組のYoutuber。</p>
             <p class="p-text">通称は「つられ」であり、ファンや他の配信者からはこの名で呼ばれている。</p>
             <p class="p-text">他の配信者とのコラボも積極的に行っており、コラボ相手は随時募集中である。</p>
+            <p class="p-text">お決まりの挨拶は「おつられさま！」</p>
         </div>
         <div class="section-back">
             <h2 class="section-title"><i class="fa-solid fa-people-group"></i>メンバー紹介</h2>
@@ -45,13 +46,13 @@
                     <p class="human-p">フグ田マスオの声真似が十八番。</p>
                 </div>
             </div>
-            <h3 class="human-name fadein">伊藤ロタ</h3>
+            <h3 class="human-name fadein">伊東ロタ</h3>
             <div class="human-section fadein">
                 <img class="yudaman-img" src="png/FVQ2GGKUAAEKGZB.jpg">
                 <div class="human-contents">
                     <p class="human-p">つられの編集担当。</p>
                     <p class="human-p">声真似のレパートリーはタラちゃん、オーキド博士、乙骨、碇シンジなど多岐に渡る。</p>
-                    <p class="human-p">現役のディレクターである。動画編集はお手の物</p>
+                    <p class="human-p">現役のディレクターである。動画編集はお手の物。</p>
                     <p class="human-p">ユダマンと2人の時はつられのボケ担当でもある。</p>
                 </div>
             </div>
@@ -104,7 +105,27 @@
                 </div>
             </div>
         </div>
-        
+
+        <div class="section-back">
+            <h2 class="section-title"><i class="fa-brands fa-youtube"></i></i>人気動画紹介</h2>
+        </div>
+        <div class="member-section shape-140" ></div>
+        <div class="movie-secction">
+            <h2 class="movie-section-title">アクシアさんとのコラボ動画</h2>
+            <iframe width="310" height="320" src="https://www.youtube.com/embed/CJLAflSLAjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="member-container">
+            <h3 class="human-name fadein">アクシアさん</h3>
+            <div class="human-section fadein">
+                <img class="yudaman-img" src="png/akushia.jpg">
+                <div class="human-contents">
+                    <p class="human-p">声でお金を稼ぐ、声真似のプロフェッショナル。</p>
+                    <p class="human-p">アクシアさんとのコラボ動画はつられの動画で一番の再生数を誇り、この動画をきっかけにファンになった人も多い。つられの恩人である。</p>
+                    <p class="human-p">声真似のレパートリーは多数あり、そのどれもが非常に高クオリティ。</p>
+                    <p class="human-p"><a href="https://www.youtube.com/channel/UCoUI3HCGP75zZlYw2b6j30A/featured">アクシアさんのチャンネルはこちら</a></p>
+                </div>
+            </div>
+        </div>
 
     </main>
 
