--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2RARE Landing page</title>
+    <title>2RARE Member's Site</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/stylesheets.css">
     <link rel="stylesheet" href="css/responsible.css">
